--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                     </div><!--fin contenedor logo-->
                         <div class="col-md-8"><!--contenedor menu-->
                             <nav class="navbar navbar-expand-md navbar-light justify-content-center">
-                                <button class="navbar-toggler mb-4 " type="button" data-toggle="collapse" data-target="#nav_principal" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <button class="navbar-toggler mb-4" type="button" data-toggle="collapse" data-target="#nav_principal" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
                                 <div id="nav_principal" class="collapse navbar-collapse navbar-light justify-content-center justify-content-lg-end text-center text-uppercase"><!--conenedor collapsado-->
-                                    <a href="index.html" class="nav-link">Inicio</a>
+                                    <a href="index.html" class="nav-link active">Inicio</a>
                                     <a href="nosotros.html" class="nav-link">Nosotros</a>
                                     <a href="productos.html" class="nav-link">Productos</a>
                                     <a href="galeria.html" class="nav-link">Galería</a>
@@ -56,6 +56,24 @@
             </div><!--Fin contenedor de logo y menu-->
         </header>
 
+        <footer class="footer p5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <nav class="nav text-uppercase d-flex flex-column flex-md-row text-center text-md-left">
+                            <a href="index.html" class="nav-link active">Inicio</a>
+                                <a href="nosotros.html" class="nav-link">Nosotros</a>
+                                <a href="productos.html" class="nav-link">Productos</a>
+                                <a href="galeria.html" class="nav-link">Galería</a>
+                                <a href="contacto.html" class="nav-link">Contacto</a>                            
+                        </nav>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="text-center text-md-right copyright mt-4 mt-md-0 pt-2">Todos los derechos reservados</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
 
 
