--- a/nosotros.html
+++ b/nosotros.html
@@ -16,8 +16,8 @@
                     <div class="row justify-content-end align-items-center animated bounceInLeft delay-10s"><!--fila direccion-->
                         <span></span>
                         <a ><span class="fas fa-mobile-alt"></span> +507 6490-9548 <span class="fas fa-phone"></span> +507 958-5427</a>
-                        <span></span>
                         <a ><span class="fas fa-envelope"></span> info@amgraphics.com.pa</a>
+                        <span></span>
                         <a class="btn btn-social-icon btn-twitter">
                             <span class="fab fa-twitter"></span>
                         </a>
@@ -45,8 +45,8 @@
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
                                 <div id="nav_principal" class="collapse navbar-collapse navbar-light justify-content-center justify-content-lg-end text-center text-uppercase"><!--conenedor collapsado-->
-                                    <a href="index.html" class="nav-link active">Inicio</a>
-                                    <a href="nosotros.html" class="nav-link">Nosotros</a>
+                                    <a href="index.html" class="nav-link">Inicio</a>
+                                    <a href="nosotros.html" class="nav-link active">Nosotros</a>
                                     <a href="productos.html" class="nav-link">Productos</a>
                                     <a href="galeria.html" class="nav-link">Galería</a>
                                     <a href="contacto.html" class="nav-link">Contacto</a>
@@ -57,13 +57,52 @@
             </div><!--Fin contenedor de logo y menu-->
         </header>
 
+        <div class="container">
+            <div class="row">
+                <div class="col-12 imagen-destacada nosotros-bg"></div><!--imagen de fondo-->
+            </div>
+        </div>
+
+            <main class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-8 py-3 px-5 contenido-nosotros bg-light">
+                        <h2 class="text-center my-4 separador">Nosotros</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum excepturi commodi nihil numquam accusantium sapiente, quam sequi id autem non veniam odit pariatur dolorum. Error nam enim aspernatur architecto amet!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum excepturi commodi nihil numquam accusantium sapiente, quam sequi id autem non veniam odit pariatur dolorum. Error nam enim aspernatur architecto amet!</p>
+                    </div>
+                </div><!--fin row nosotros-->
+
+                <section class="vis-mis mt-5">
+                    <h2 class="text-center mb-4 separador">Misión y Visión</h2>
+
+                    <div class="row">
+                        <div class="col-md-6 vision">
+                            <h2 class="text-center">Visión</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, itaque. Animi eaque, iusto sequi laudantium in voluptatum deserunt neque iure dignissimos sed cum vero delectus consequatur quam aspernatur quae! Incidunt.</p>
+                        </div>
+                        <div class="col-md-6 mision">
+                            <h2 class="text-center">Misión</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam laborum minus esse, totam similique recusandae magni dolore harum. Quam odit omnis aspernatur, totam ab fugiat corrupti quos voluptas molestiae ullam.</p>
+                        </div>
+                    </div>
+                </section>       
+                
+                <section class="valores mt-5 mb-4">
+                    <h2 class="text-center mb-3 separador">Valores</h2>
+                    <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, reprehenderit quas nemo omnis officia quidem ex blanditiis quos sapiente mollitia provident voluptates laboriosam dicta labore voluptas laudantium debitis illum culpa.</p>
+                </section>
+
+
+            </main>
+
+
         <footer class="p5">
             <div class="footer container">
                 <div class="row">
                     <div class="col-md-6">
                         <nav class="nav text-uppercase d-flex flex-column flex-md-row text-center text-md-left">
-                            <a href="index.html" class="nav-link active">Inicio</a>
-                                <a href="nosotros.html" class="nav-link">Nosotros</a>
+                            <a href="index.html" class="nav-link">Inicio</a>
+                                <a href="nosotros.html" class="nav-link active">Nosotros</a>
                                 <a href="productos.html" class="nav-link">Productos</a>
                                 <a href="galeria.html" class="nav-link">Galería</a>
                                 <a href="contacto.html" class="nav-link">Contacto</a>                            
