--- a/nosotros.html
+++ b/nosotros.html
@@ -48,7 +48,7 @@
                                     <a href="index.html" class="nav-link">Inicio</a>
                                     <a href="nosotros.html" class="nav-link active">Nosotros</a>
                                     <a href="productos.html" class="nav-link">Productos</a>
-                                    <a href="galeria.html" class="nav-link">Galería</a>
+                                    <a href="proyectos.html" class="nav-link">Proyectos</a>
                                     <a href="contacto.html" class="nav-link">Contacto</a>
                                 </div><!--fin contenedor menu colapsado-->
                             </nav>
@@ -104,7 +104,7 @@
                             <a href="index.html" class="nav-link">Inicio</a>
                                 <a href="nosotros.html" class="nav-link active">Nosotros</a>
                                 <a href="productos.html" class="nav-link">Productos</a>
-                                <a href="galeria.html" class="nav-link">Galería</a>
+                                <a href="proyectos.html" class="nav-link">Proyectos</a>
                                 <a href="contacto.html" class="nav-link">Contacto</a>                            
                         </nav>
                     </div>
