--- a/proyectos.html
+++ b/proyectos.html
@@ -73,7 +73,7 @@
                     <h1 class="separador text-center mb-3">Proyectos realizados</h1>
                     <article class="post pt-2 mb-3 animated bounceInLeft">
                         <header class="py-2" >
-                            <a href="post.html">
+                            <a href="entrada.html">
                                 <h3>Título del Proyecto</h3>
                             </a>
                             <div class="post-details py-2">
@@ -191,7 +191,7 @@
                                 <div class="card-footer">
                                     <a href="#">Más Información</a>
                                 </div>
-                            </div>
+                            </div><!--fin card-->
                             <div class="card">
                                 <img src="img/img-600x400.png" alt="promocion" class="img-fluid">
                                 <div class="card-body">
@@ -201,8 +201,8 @@
                                 <div class="card-footer">
                                     <a href="#">Más Información</a>
                                 </div>
-                            </div>
-                    </div>
+                            </div><!--fin card-->
+                    </div><!--fin promociones-->
                 </aside>
             </div>
         </div>
