--- a/galeria.html
+++ b/galeria.html
@@ -45,11 +45,11 @@
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
                                 <div id="nav_principal" class="collapse navbar-collapse navbar-light justify-content-center justify-content-lg-end text-center text-uppercase"><!--conenedor collapsado-->
-                                    <a href="index.html" class="nav-link active">Inicio</a>
+                                    <a href="index.html" class="nav-link">Inicio</a>
                                     <a href="nosotros.html" class="nav-link">Nosotros</a>
                                     <a href="productos.html" class="nav-link">Productos</a>
                                     <a href="proyectos.html" class="nav-link">Proyectos</a>
-                                    <a href="galeria.html" class="nav-link">Galeria</a>
+                                    <a href="galeria.html" class="nav-link active">Galería</a>
                                     <a href="contacto.html" class="nav-link">Contacto</a>
                                 </div><!--fin contenedor menu colapsado-->
                             </nav>
@@ -63,11 +63,11 @@
                 <div class="row">
                     <div class="col-md-8">
                         <nav class="nav text-uppercase d-flex flex-column flex-md-row text-center text-md-left">
-                            <a href="index.html" class="nav-link active">Inicio</a>
+                            <a href="index.html" class="nav-link">Inicio</a>
                                 <a href="nosotros.html" class="nav-link">Nosotros</a>
                                 <a href="productos.html" class="nav-link">Productos</a>
                                 <a href="proyectos.html" class="nav-link">Proyectos</a>
-                                <a href="galeria.html" class="nav-link">Galería</a>
+                                <a href="galeria.html" class="nav-link active">Galería</a>
                                 <a href="contacto.html" class="nav-link">Contacto</a>                            
                         </nav>
                     </div>
