--- a/nosotros.html
+++ b/nosotros.html
@@ -49,6 +49,7 @@
                                     <a href="nosotros.html" class="nav-link active">Nosotros</a>
                                     <a href="productos.html" class="nav-link">Productos</a>
                                     <a href="proyectos.html" class="nav-link">Proyectos</a>
+                                    <a href="galeria.html" class="nav-link">Galeria</a>
                                     <a href="contacto.html" class="nav-link">Contacto</a>
                                 </div><!--fin contenedor menu colapsado-->
                             </nav>
@@ -99,16 +100,17 @@
         <footer class="p5">
             <div class="footer container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         <nav class="nav text-uppercase d-flex flex-column flex-md-row text-center text-md-left">
                             <a href="index.html" class="nav-link">Inicio</a>
                                 <a href="nosotros.html" class="nav-link active">Nosotros</a>
                                 <a href="productos.html" class="nav-link">Productos</a>
                                 <a href="proyectos.html" class="nav-link">Proyectos</a>
+                                <a href="galeria.html" class="nav-link">Galería</a>
                                 <a href="contacto.html" class="nav-link">Contacto</a>                            
                         </nav>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <p class="text-center text-md-right copyright mt-4 mt-md-0 pt-2">Todos los derechos reservados</p>
                     </div>
                 </div>
