--- a/contacto.html
+++ b/contacto.html
@@ -58,9 +58,9 @@
             </div><!--Fin contenedor de logo y menu-->
         </header>
 
-        <main class="container mb-5">
+        <main class="container mb-5 p-4">
             <div class="row mb-5">
-                <div class="col-md-6">
+                <div class="col-md-6 mb-4 mb-md-0">
                     <h2 class="text-center my-5">Contáctanos</h2>
                     <form>
                         <div class="form-row">
@@ -94,9 +94,99 @@
                         <button type="submit" class="btn btn-primary">Sign in</button>
                     </form>               
                 </div><!--fin col-md-6-->
+                <div class="col-md-6 bg-primary address p-4">
+                    <div class="container">
+                            <h2 class="mb-4">Dirección</h2>
+                        <div class="row">
+                            <div class="col-2 text-center">
+                                <p class="fas fa-map-marker-alt"></p>
+                            </div><!--fin col-2-->
+                            <div class="col-10">
+                                <address>
+                                    <h4>A&M Graphics Santiago</h4>
+                                    Entrada de la barriada 5 de mayo<br>
+                                    Vía Interamericana Diagonal a Cochez<br>
+                                    Santiago, Veraguas, Panamá
+                                </address>
+                            </div><!--fin col-10-->
+                        </div><!--fin row-->
+                        <div class="row">
+                            <div class="col-2 text-center">
+                                <p class="fas fa-mobile-alt"></p>
+                            </div><!--fin col-2-->
+                            <div class="col-10">
+                                <div>
+                                    +507 6490-5427
+                                </div>
+                            </div><!--fin col-10-->
+                        </div><!--fin row-->
+                        <div class="row">
+                            <div class="col-2 text-center">
+                                <p class="fas fa-phone"></p>
+                            </div><!--fin col-2-->
+                            <div class="col-10">
+                                <div>
+                                    +507 958-5427
+                                </div>
+                            </div><!--fin col-10-->
+                        </div><!--fin row-->
+                        <div class="row">
+                            <div class="col-2 text-center">
+                                <p class="fas fa-envelope"></p>
+                            </div><!--fin col-2-->
+                            <div class="col-10">
+                                <div>
+                                    <a>info@amgraphics.com.pa</a>
+                                </div>
+                            </div><!--fin col-10-->
+                        </div><!--fin row-->
+                        <div class="row mt-5">
+                            <div class="col-2 text-center">
+                                <p class="fas fa-map-marker-alt"></p>
+                            </div><!--fin col-2-->
+                            <div class="col-10">
+                                <address>
+                                    <h4>A&M Graphics Panamá</h4>
+                                    El Ingenio. Ave. La Paz<br>
+                                    Bethania, Panamá
+                                </address>
+                            </div><!--fin col-10-->
+                        </div><!--fin row-->
+                        <div class="row">
+                            <div class="col-2 text-center">
+                                <p class="fas fa-mobile-alt"></p>
+                            </div><!--fin col-2-->
+                            <div class="col-10">
+                                <div>
+                                    +507 6490-5427
+                                </div>
+                            </div><!--fin col-10-->
+                        </div><!--fin row-->
+                        <div class="row">
+                            <div class="col-2 text-center">
+                                <p class="fas fa-phone"></p>
+                            </div><!--fin col-2-->
+                            <div class="col-10">
+                                <div>
+                                    +507 958-5427
+                                </div>
+                            </div><!--fin col-10-->
+                        </div><!--fin row-->
+                        <div class="row">
+                            <div class="col-2 text-center">
+                                <p class="fas fa-envelope"></p>
+                            </div><!--fin col-2-->
+                            <div class="col-10">
+                                <div>
+                                    <a>ventaspty@amgraphics.com.pa</a>
+                                </div>
+                            </div><!--fin col-10-->
+                        </div><!--fin row-->
+                    </div><!--fin container-->
+                </div><!--fin col-md-6-->
             </div><!--fin row-->
             <div class="row">
-                <h3 class="maps mb-4">Abrir mapa en Google Maps</h3>
+                <h3 class="maps mb-4 justify-content-left">Abrir mapa en Google Maps</h3>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.0166787630283!2d-80.96615034940599!3d8.09978070504963!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fae723fee162b71%3A0xdd2b8708a8b40dab!2sA%26M+Graphics+Santiago!5e0!3m2!1ses-419!2spa!4v1541871903594" width="1300" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </main>
