--- a/index.html
+++ b/index.html
@@ -58,6 +58,54 @@
             </div><!--Fin contenedor de logo y menu-->
         </header>
 
+        <div class="container my-4">
+                <div id="demo" class="carousel slide" data-ride="carousel">
+                        <ul class="carousel-indicators">
+                          <li data-target="#demo" data-slide-to="0" class="active"></li>
+                          <li data-target="#demo" data-slide-to="1"></li>
+                          <li data-target="#demo" data-slide-to="2"></li>
+                        </ul>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="img/img-1300x600.png" alt="Los Angeles" width="1100" height="500">
+                            <div class="carousel-caption animated bounceInLeft">
+                              <h3>Los Angeles</h3>
+                              <p>We had such a great time in LA!</p>
+                            </div>   
+                          </div>
+                          <div class="carousel-item">
+                            <img src="img/img-1300x600.png" alt="Chicago" width="1100" height="500">
+                            <div class="carousel-caption animated bounceInLeft">
+                              <h3>Chicago</h3>
+                              <p>Thank you, Chicago!</p>
+                            </div>   
+                          </div>
+                          <div class="carousel-item">
+                            <img src="img/img-1300x600.png" alt="New York" width="1100" height="500">
+                            <div class="carousel-caption animated bounceInLeft">
+                              <h3>New York</h3>
+                              <p>We love the Big Apple!</p>
+                            </div>   
+                          </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                          <span class="carousel-control-prev-icon"></span>
+                        </a>
+                        <a class="carousel-control-next" href="#demo" data-slide="next">
+                          <span class="carousel-control-next-icon"></span>
+                        </a>
+                      </div>
+        
+
+        </div>
+
+
+
+
+
+
+
+
         <footer class="p5">
             <div class="footer container">
                 <div class="row">
