--- a/galeria.html
+++ b/galeria.html
@@ -34,12 +34,12 @@
         
         <div class="container franja-logo"><!--Contenedor de Logo y Menu-->
             <div class="row justify-content-center align-items-center"><!--fila logo-menu-->
-                <div class="col-md-4 col-8 mb-4 mb-md-0"><!--contendor logo-->
+                <div class="col-lg-4 col-8 mb-4 mb-md-0"><!--contendor logo-->
                     <a href="index.html">
                         <img src="img/amgraphics.png" class="img-fluid" alt="">
                     </a>
                 </div><!--fin contenedor logo-->
-                    <div class="col-md-8"><!--contenedor menu-->
+                    <div class="col-lg-8"><!--contenedor menu-->
                         <nav class="navbar navbar-expand-md navbar-light justify-content-center">
                             <button class="navbar-toggler mb-4" type="button" data-toggle="collapse" data-target="#nav_principal" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
