--- a/post.html
+++ b/post.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <div class="container franja-address"><!-- Contenedor de dirección-->
+            <div class="container-fluid franja-address"><!-- Contenedor de dirección-->
                 <address class="container"><!--contenedor direccion-->
                     <div class="row justify-content-end align-items-center animated bounceInLeft delay-10s"><!--fila direccion-->
                         <span></span>
@@ -75,26 +75,28 @@
                 </div><!--fin row nosotros-->
             </main>
 
-        <footer class="p5">
-            <div class="footer container">
-                <div class="row">
-                    <div class="col-md-8">
-                        <nav class="nav text-uppercase d-flex flex-column flex-md-row text-center text-md-left">
-                            <a href="index.html" class="nav-link">Inicio</a>
-                                <a href="nosotros.html" class="nav-link">Nosotros</a>
-                                <a href="productos.html" class="nav-link">Productos</a>
-                                <a href="proyectos.html" class="nav-link active">Proyectos</a>
-                                <a href="galeria.html" class="nav-link">Galería</a>
-                                <a href="contacto.html" class="nav-link">Contacto</a>                            
-                        </nav>
-                    </div>
-                    <div class="col-md-4">
-                        <p class="text-center text-md-right copyright mt-4 mt-md-0 pt-2">Todos los derechos reservados</p>
-                    </div>
-                </div>
-            </div>
+        <footer class="container-fluid">
+                    <div class="row footer">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <nav class="nav text-uppercase d-flex flex-column flex-md-row text-center text-md-left">
+                                        <a href="index.html" class="nav-link active">Inicio</a>
+                                            <a href="nosotros.html" class="nav-link">Nosotros</a>
+                                            <a href="productos.html" class="nav-link">Productos</a>
+                                            <a href="proyectos.html" class="nav-link">Proyectos</a>
+                                            <a href="galeria.html" class="nav-link">Galería</a>
+                                            <a href="contacto.html" class="nav-link">Contacto</a>                            
+                                    </nav>
+                                </div><!--fin col-md-8-->
+                                <div class="col-md-4">
+                                    <p class="text-center text-md-right copyright mt-4 mt-md-0 pt-2">Todos los derechos reservados</p>
+                                </div><!--fin col-md-4-->
+                            </div><!--fin row-->
+                        </div><!--fin container-->
+                    </div><!--fin row footer-->
         </footer>
-
+        
 
 
         <script src="js/jquery.js"></script>
