--- a/productos.html
+++ b/productos.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <div class="container franja-address"><!-- Contenedor de dirección-->
+            <div class="container-fluid franja-address"><!-- Contenedor de dirección-->
                 <address class="container"><!--contenedor direccion-->
                     <div class="row justify-content-end align-items-center animated bounceInLeft delay-10s"><!--fila direccion-->
                         <span></span>
@@ -58,7 +58,7 @@
             </div><!--Fin contenedor de logo y menu-->
         </header>
 
-        <main class="container productos">
+        <main class="container productos mb-3">
             <div class="row justify-content-center ">
                 <div class="col-12 py-3 px-5  bg-light">
                     <h2 class="text-center my-4 separador">Productos</h2>
@@ -180,25 +180,28 @@
 
 
 
-        <footer class="p5">
-            <div class="footer container">
-                <div class="row">
-                    <div class="col-md-8">
-                        <nav class="nav text-uppercase d-flex flex-column flex-md-row text-center text-md-left">
-                            <a href="index.html" class="nav-link">Inicio</a>
-                                <a href="nosotros.html" class="nav-link">Nosotros</a>
-                                <a href="productos.html" class="nav-link active">Productos</a>
-                                <a href="proyectos.html" class="nav-link">Proyectos</a>
-                                <a href="galeria.html" class="nav-link">Galería</a>
-                                <a href="contacto.html" class="nav-link">Contacto</a>                            
-                        </nav>
-                    </div>
-                    <div class="col-md-4">
-                        <p class="text-center text-md-right copyright mt-4 mt-md-0 pt-2">Todos los derechos reservados</p>
-                    </div>
-                </div>
-            </div>
-        </footer>
+    <footer class="container-fluid">
+                <div class="row footer">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <nav class="nav text-uppercase d-flex flex-column flex-md-row text-center text-md-left">
+                                    <a href="index.html" class="nav-link active">Inicio</a>
+                                        <a href="nosotros.html" class="nav-link">Nosotros</a>
+                                        <a href="productos.html" class="nav-link">Productos</a>
+                                        <a href="proyectos.html" class="nav-link">Proyectos</a>
+                                        <a href="galeria.html" class="nav-link">Galería</a>
+                                        <a href="contacto.html" class="nav-link">Contacto</a>                            
+                                </nav>
+                            </div><!--fin col-md-8-->
+                            <div class="col-md-4">
+                                <p class="text-center text-md-right copyright mt-4 mt-md-0 pt-2">Todos los derechos reservados</p>
+                            </div><!--fin col-md-4-->
+                        </div><!--fin row-->
+                    </div><!--fin container-->
+                </div><!--fin row footer-->
+    </footer>
+    
 
 
 
