--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
             <div class="container my-5">
                 <div class="row imagen">
-                    <div class="col-md-6 bg-light animatedParent">
+                    <div class="col-md-12 col-lg-6 bg-light animatedParent">
                         <div class="row historia align-items-center animated bounceInLeft delay-0.5s">
                             <div class="col-md-6">
                                 <img src="img/historia-aym-350X250.png" alt="historia" class="img-fluid">
@@ -118,7 +118,7 @@
                             </div><!--fin col-md-6-->
                         </div><!--fin row historia-->
                     </div><!--fin col-md-6-->
-                    <div class="col-md-6 bg-ligth animatedParent">
+                    <div class="col-md-12 col-lg-6 bg-ligth animatedParent">
                         <div class="row mision align-items-center  animated bounceInRight delay-0.5s">
                             <div class="col-md-6">
                                 <img src="img/mision-aym-350X250.png" alt="mision" class="img-fluid">
@@ -310,7 +310,58 @@
             </div><!--fin row imagen-servicios-->
         </div><!--fin container fluid-->
     
-    
+        <!--Como trabajamos-->
+        <div class="container my-5 animatedParent">
+            <div class="contenido text-center my-2">
+                <h4>Cómo trabajamos</h4>
+                <h2>Nuestro <span style="color:#006bb1">Proceso</span></h2>
+            </div><!--fin contenido-->
+            <div class="row proceso mt-4">
+                <div class="col-sm-12 col-md-6 col-lg-3 align-items-center animated lightSpeedInLeft">
+                    <div class="uno text-center">
+                        <img src="img/num-1.png" alt="uno">
+                        <div class="texto-numero mt-4 ">
+                            <h3>Solicitud de Cotización</h3>
+                            <p>Envie un correo a <a href="mailto:info@aymgraphics.com.pa">info@aymgraphics.com.pa</a>, incluya todos los detalles de su trabajo, tendrá un presupuesto en menos de 24 Horas.</p>
+                            <p>Si cuenta con diseño envie el archivo para evaluar si es apto para impresión.</p>
+                            <p><em><strong>&#8220;Previa cita para atención en la oficina.&#8221;</strong></em></p>
+                        </div><!--fin texto-uno-->
+                    </div><!--fin uno-->
+                </div><!--fin col-sm-6-->
+                <div class="col-sm-12 col-md-6 col-lg-3 align-items-center animated lightSpeedInLeft">
+                    <div class="uno text-center">
+                        <img src="img/num-2.png" alt="dos">
+                        <div class="texto-numero mt-4">
+                            <h3>Autorización y Aprobación</h3>
+                            <p>Se trabajará en una propuesta de diseño en caso de no contar con el archivo.</p>
+                            <p>Ya conformes con los resultados se requerirá en algunos casos un anticipo. Se requiere aprobación para producción..</p>
+                        </div><!--fin texto-uno-->
+                    </div><!--fin uno-->
+                </div><!--fin col-sm-6-->
+                <div class="col-sm-12 col-md-6 col-lg-3 align-items-center animated lightSpeedInLeft">
+                    <div class="uno text-center">
+                        <img src="img/num-3.png" alt="tres">
+                        <div class="texto-numero mt-4">
+                            <h3>Producción</h3>
+                            <p>Su trabajo pasará a producción, el tiempo de entrega varia entre cada tipo de trabajo.</p>
+                            <p>El tiempo de entrega estará especificado en su factura.</p>
+                        </div><!--fin texto-uno-->
+                    </div><!--fin uno-->
+                </div><!--fin col-sm-6-->
+                <div class="col-sm-12 col-md-3 align-items-center animated lightSpeedInLeft">
+                    <div class="uno text-center">
+                        <img src="img/num-4.png" alt="cuatro">
+                        <div class="texto-numero mt-4">
+                            <h3>Entrega de Materiales</h3>
+                            <p>Las entregas se efectúan en nuestras oficinas el día y la hora especificada en su factura.</p>
+                            <p><em><strong>&#8220;Debe notificar la hora de recogida de material en caso de no poder presentarse a tiempo.&#8221;</strong></em></p>
+                            <p>Contamos con entregas a domicilio con cargo adicional.</p>
+                        </div><!--fin texto-uno-->
+                    </div><!--fin uno-->
+                </div><!--fin col-sm-6-->
+            </div><!--fin row proceso-->
+
+        </div><!--fin container-->
 
 
 
